--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react": "^18.2.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "turbo": "^2.3.4",
+    "tmp": "^0.2.5",
+    "turbo": "^2.8.11",
     "typescript": "^5.7.3"
   },
   "engines": {
@@ -28,5 +29,8 @@
     "jose": "^6.1.1",
     "ts-jest": "^29.3.1",
     "ws": "^8.18.3"
+  },
+  "overrides": {
+    "tmp": "$tmp"
   }
 }
